@@ -6,6 +6,8 @@ New Features:
   - Improvements to the Russound protocol implementation (Torbjorn Osterdahl, ORCJAVA-461)
   - Add possibility of ReadCommand implementations to define
 	  their polling interval (Marcus Redeker, ORCJAVA-464)
+  - Update HTTP protocol to extend ReadCommand instead of
+	  implementing EventListener (Marcus Redeker, ORCJAVA-465)
 
 Controller Pro 1.1.0
 ====================
